# valadoc-www

./: .gitignore  README-next.md  README.md  examples.txt  gulpfile.babel.js  meson.build  meson_options.txt  package.json  techstack.md  techstack.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml
data/scripts/: main.js
data/styles/: main.css
presets/: core.txt  elementary.txt  gtk4.txt
src/Docs/: Config.vala.in  Doclet.vala  Generator.vala  LinkHelper.vala  meson.build
src/Example/: meson.build
src/Generator/: Generator.vala  meson.build
static/: markup-content.htm  markup.content.htm
task/: build  clean  run  test_examples
templates/: main.css.tmpl  valadoc.tmpl
