# Setup example utilities' variables
example_generator_deps = [
    dependency('gee-0.8'),
    dependency('gio-2.0'),
]

example_generator_sources = files(
    'Parser.vala',
    'Generator.vala'
)

examlpe_tester_deps = [
    dependency('gee-0.8'),
    dependency('gio-2.0'),
]

example_tester_sources = files(
    'Parser.vala',
    'Tester.vala'
)